Fixing Overflow

--- a/src/components/Home/Logo/logo.scss
+++ b/src/components/Home/Logo/logo.scss
@@ -70,7 +70,7 @@
   
 }
 
-.path {
+#path {
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
     animation: dash 5s linear alternate infinite;
